[package]
name = "bio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version="0.24", features=["serde"] }
termy = { git = "https://github.com/Vafdaf12/termy.git" }
regex = "1.6.0"
serde_regex = "1.1.0"
serde = "1.0.139"
serde_json = "1.0.82"
